--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,11 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    labels:
+      - dependencies
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
+    reviewers:
+      - 'Christian-Seiler'
