--- a/apps/website-e2e/project.json
+++ b/apps/website-e2e/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "website-e2e",
+  "name": "@cs/website-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/website-e2e/src",
   "projectType": "application",
