--- a/apps/website/.eslintrc.json
+++ b/apps/website/.eslintrc.json
@@ -9,7 +9,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "christianseilerCh",
+            "prefix": "cs",
             "style": "camelCase"
           }
         ],
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "christianseiler-ch",
+            "prefix": "cs",
             "style": "kebab-case"
           }
         ]
