--- a/apps/website/project.json
+++ b/apps/website/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "website",
+  "name": "@cs/website",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/website/src",
@@ -69,6 +69,12 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/website/**/*.ts", "apps/website/**/*.html"]
+      },
+      "configurations":{
+        "ci": {
+          "format": "@microsoft/eslint-formatter-sarif",
+          "outputFile": "website.lint.sarif"
+        }
       }
     },
     "test": {
