--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
     "@compodoc/compodoc": "^1.1.19",
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "@nrwl/cli": "15.6.2",
     "@nrwl/cypress": "15.6.2",
     "@nrwl/eslint-plugin-nx": "15.6.2",
